align fix again :p

--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@ body {
 }
 
 .container {
-  display: flex;
   margin: 0 auto;
   padding: 0 15px;
   justify-content: space-between;
